algorithm improved, + visualisation